src/components/Game/ContentSituationsList/ContentSituationsList.module.scss
.wrapper {
  position: relative;
  grid-area: list;

  @media screen and (max-width: 800px) {
    background: #f4f5f7;

    > .controls {
      display: none;
    }
  }
  @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    background: #f4f5f7;

    > .controls {
      display: none;
    }
  }
}

.controlsWrapper {
  position: absolute;
  right: 9px;
  bottom: 10px;
  opacity: 0.25;
  transition: opacity var(--transition-speed);

  &:hover {
    opacity: 1;
  }
}

.list {
  height: 100%;
  overflow-y: scroll;
  scroll-behavior: smooth;

  @media screen and (max-width: 800px) {
    background: #f4f5f7;
    height: calc(100vh - 30.63px - 112.5px - 100vw / 16 * 9 - 54px - 19px);

    &.listNoVideo {
      // height: calc(100vh - var(--desktop-nav-height) - 112.5px - 49px - 19px);
			height: unset;
    }

    &.mobilePlaysListHeight {
      // height: calc(100vh - var(--desktop-nav-height) - 112.5px - 100vw / 16 * 9 - 30px - 20px - 19px);
			height: unset;
    }
    &.mobilePlaysListHeightVideo {
      // height: calc(100vh - var(--desktop-nav-height) - 112.5px - 100vw / 16 * 9 - 50px - 19px);
			height: unset;
    }
  }
  @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    background: #f4f5f7;
    height: calc(100vh - 30.63px - 112.5px - 100vw / 16 * 9 - 54px - 19px);

    &.listNoVideo {
      height: calc(100vh - var(--landscape-nav-height) - 111px - 19px);
    }

    &.mobilePlaysListHeight {
      height: calc(100vh - var(--landscape-nav-height) - 29px - 26px - 19px);
    }
    &.mobilePlaysListHeightVideo {
      height: calc(100vh - var(--landscape-nav-height) - 29px - 19px);
    }
  }

  > * + * {
    margin-top: 2px;
  }

  &::-webkit-scrollbar {
    width: 7px;

    @media screen and (max-width: 800px) {
      width: 0;
    }
    @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
      width: 0;
    }
  }

  &::-webkit-scrollbar-track {
    background: transparent;
  }

  &::-webkit-scrollbar-thumb {
    width: 7px;
    background: #acacac;
    border: 2px solid #e5e5e5;
    border-radius: 5px;
  }

  @media only screen and (min-device-width: 481px) and (max-device-width: 1366px) and (max-device-height: 1024px) and (orientation: landscape) {
    border-right: 6px solid #e5e5e5;
  }
  @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    border-right: unset;
  }
}

.blueDiv {
  position: absolute;
  right: 7px;
  top: 0;
  height: 2px;
  width: calc(100% - 7px);
  background-color: var(--side-color);

  @media screen and (max-width: 800px) {
    display: none;
  }
  @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    display: none;
  }
}

.wider {
  animation: slideToLeft 0.2s linear forwards;
}

.taller {
  animation: slideToRight 0.2s linear forwards;
}

@keyframes slideToLeft {
  from {
    width: 0;
  }

  to {
    width: calc(100% - 7px);
  }
}

@keyframes slideToRight {
  from {
    width: calc(100% - 7px);
  }

  to {
    width: 0;
  }
}

.landscapeOnly {
  display: none;

  @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    display: block;
    background: #f4f5f7;
    border-bottom: 0.5px solid #cdcccc;
    border-top: 0.5px solid #cdcccc;

    > ul {
      display: flex;
    }
  }
}

.mobileOnlyFields {
  display: none;

  @media screen and (max-width: 800px),
    screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    display: flex;
    justify-content: 'center';
    height: 19px;
  }
}

.landscapeDisplayNone {
	@media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    display: none;
  }
}

